// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleAddOrderRequest 1`] = `
Array [
  Array [
    Object {
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
      "requestor": "relayer",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "status": "confirmed",
      "token": "code1",
    },
  ],
]
`;

exports[`handleAddOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "userOrder": "userOrder",
    },
    "add",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xInvalidOrderHash",
      "pair": "code1|code2",
    },
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest invalid persist 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "code1|code2",
    },
    "error",
  ],
]
`;

exports[`handleOrderBookRequest invalid method 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleOrderBookRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderBookRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 3`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair existing ws 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair existing ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair new ws 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair new ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 3`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 3`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "error",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest existing pair non existing ws 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest no more subscription 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest no more subscription 2`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest non existing pair 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUpdate 1`] = `
Array [
  Array [
    "ws1",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"code1|code2\\",\\"orderBookUpdate\\":{\\"pair\\":\\"code1|code2\\"}}",
  ],
  Array [
    "ws2",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"code1|code2\\",\\"orderBookUpdate\\":{\\"pair\\":\\"code1|code2\\"}}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest existing account new ws 1`] = `
Object {
  "account": Array [
    "ws",
    "ws1",
  ],
}
`;

exports[`handleOrderHistorySubscribeRequest existing account new ws 2`] = `
Array [
  Array [
    "ws1",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest existing account same ws 1`] = `
Object {
  "account": Array [
    "ws",
  ],
}
`;

exports[`handleOrderHistorySubscribeRequest existing account same ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new account  1`] = `
Object {
  "account": Array [
    "ws",
  ],
}
`;

exports[`handleOrderHistorySubscribeRequest new account  2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new account  3`] = `
Array [
  Array [
    "code1|base1",
    [Function],
  ],
  Array [
    "code1|base2",
    [Function],
  ],
  Array [
    "code2|base1",
    [Function],
  ],
  Array [
    "code2|base2",
    [Function],
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clean up 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clean up 2`] = `
Array [
  Array [
    "code1|base1",
  ],
  Array [
    "code1|base2",
  ],
  Array [
    "code2|base1",
  ],
  Array [
    "code2|base2",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account more than one 1`] = `
Object {
  "account": Array [
    "ws",
  ],
}
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account more than one 2`] = `
Array [
  Array [
    "ws1",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest new account 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "",
    },
    "ok",
  ],
]
`;

exports[`handleOrderRequest add 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest invalid requests 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "",
      "channel": "orders",
      "method": "subscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleOrderRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "orders",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest terminate 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "orders",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderUpdate requested existing pair existing account 1`] = `
Array [
  Array [
    "ws",
    "userOrder",
    "method",
  ],
  Array [
    "ws1",
    "userOrder",
    "method",
  ],
]
`;

exports[`handleTerminateOrderRequest 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest 2`] = `
Array [
  Array [
    Object {},
    "userOrder",
    "terminate",
  ],
]
`;

exports[`handleTerminateOrderRequest invalid request and liveOrder does not exist 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "signature": "signature",
    },
    "invalid request",
  ],
]
`;

exports[`handleTerminateOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "signature": "signature",
    },
    "error",
  ],
]
`;

exports[`handleTerminateOrderRequest persist error 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest persist no return 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "signature": "signature",
    },
    "invalid order",
  ],
]
`;

exports[`handleTerminateOrderRequest persist no return 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest signature is wrong 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "signature": "siganature",
    },
    "invalid request",
  ],
]
`;

exports[`handleWebSocketClose 1`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "message",
            [Function],
          ],
          Array [
            "close",
            [Function],
          ],
          Array [
            "message",
            [Function],
          ],
          Array [
            "close",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "pair",
  ],
]
`;

exports[`handleWebSocketClose 2`] = `
Array [
  Array [
    Object {
      "name": "ws",
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "message",
            [Function],
          ],
          Array [
            "close",
            [Function],
          ],
          Array [
            "message",
            [Function],
          ],
          Array [
            "close",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "account",
  ],
]
`;

exports[`handleWebSocketConnection 1`] = `
Array [
  Object {
    "name": "ws",
    "on": [MockFunction] {
      "calls": Array [
        Array [
          "message",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
  },
]
`;

exports[`handleWebSocketConnection 2`] = `
Array [
  Array [
    "message",
    [Function],
  ],
  Array [
    "close",
    [Function],
  ],
]
`;

exports[`handleWebSocketConnection same connection 1`] = `
Array [
  Object {
    "name": "ws",
    "on": [MockFunction] {
      "calls": Array [
        Array [
          "message",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
        Array [
          "message",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    },
  },
]
`;

exports[`handleWebSocketConnection same connection 2`] = `
Array [
  Array [
    "message",
    [Function],
  ],
  Array [
    "close",
    [Function],
  ],
  Array [
    "message",
    [Function],
  ],
  Array [
    "close",
    [Function],
  ],
]
`;

exports[`handleWebSocketMessage invalid requests 1`] = `
Array [
  Array [
    "ws",
    Object {},
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleWebSocketMessage orderBooks 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orderBooks",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleWebSocketMessage orders 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`loadDuoAcceptedPrices 1`] = `
Array [
  Array [
    "0xf474e7E554D98a580282726434d1281aA273E87F",
    Array [
      "YYYY-MM-DD",
    ],
  ],
]
`;

exports[`sendErrorOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\",\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`sendInfo 1`] = `
Array [
  Array [
    "{\\"channel\\":\\"info\\",\\"method\\":\\"info\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"acceptedPrices\\":{\\"custodian\\":[\\"acceptedPrices\\"]},\\"tokens\\":[\\"token1\\"],\\"processStatus\\":[\\"status1\\"]}",
  ],
]
`;

exports[`sendResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`sendUserOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"type\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"userOrder\\":{\\"test\\":\\"liveOrder\\"}}",
  ],
]
`;
